--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <link href="universal_video_background.css" rel="stylesheet" type="text/css">
 		
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
-<script src="http://a.vimeocdn.com/js/froogaloop2.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
+<script src="//a.vimeocdn.com/js/froogaloop2.min.js"></script>
 <script src="universal_video_background.js" type="text/javascript"></script>
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+<link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 <!-- must have -->
 
 <style type="text/css">
