--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="css/site.css" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
-    <script src="https://a.vimeocdn.com/js/froogaloop2.min.js"></script>
+    <script src="js/froogaloop2.min.js"></script>
     <script src="js/universal_video_background.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Flowtype.js/1.1.0/flowtype.min.js" type="text/javascript"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
