--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <body bgcolor="#333333">
     <div id="universal_video_background_default" style="display:none;">
         <ul class="universal_video_background_list">
-            <li data-bottom-thumb="images/self_01_img.jpg" data-selfhostedMP4="videos/TAP_film.mp4" data-selfhostedWEBM="videos/TAP_film.webm"></li>
+            <li data-bottom-thumb="images/self_01_img.jpg" data-selfhostedMP4="videos/TAP_film_faster.mp4" data-selfhostedWEBM="videos/TAP_film.webm"></li>
             <!--<li data-bottom-thumb="images/self_01_img.jpg" data-youtube="KiLOWhcrxgo"></li>-->
         </ul>
     </div>
