--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
         } else {
 
             jQuery('#universal_video_background_default').universal_video_background({
+                width: 1920,
+				height: 1200,
                 autoPlayFirstVideo: true,
                 width100Proc: true,
                 height100Proc: true,
