--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
 
             jQuery('#universal_video_background_default').universal_video_background({
                 width: 1920,
-				height: 1200,
-                autoPlayFirstVideo: true,
+		    height: 1200,
+		    responsiveRelativeToBrowser: true,
+		    autoPlayFirstVideo: true,
                 width100Proc: true,
                 height100Proc: true,
                 responsive: true,
