--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                 height100Proc: true,
                 responsive: true,
                 setAsBg: true,
+		suggestedQuality: 'hd1080',
                 showVideoControls: false,
                 showBottomNav: false,
                 showOnInitBottomNav: false,
@@ -83,8 +84,8 @@
 <body bgcolor="#333333">
     <div id="universal_video_background_default" style="display:none;">
         <ul class="universal_video_background_list">
-            <li data-bottom-thumb="images/self_01_img.jpg" data-selfhostedMP4="videos/TAP_film_faster.mp4" data-selfhostedWEBM="videos/TAP_film.webm"></li>
-            <!--<li data-bottom-thumb="images/self_01_img.jpg" data-youtube="KiLOWhcrxgo"></li>-->
+            <!--<li data-bottom-thumb="images/self_01_img.jpg" data-selfhostedMP4="videos/TAP_film_faster.mp4" data-selfhostedWEBM="videos/TAP_film.webm"></li>-->
+            <li data-bottom-thumb="images/self_01_img.jpg" data-youtube="KiLOWhcrxgo"></li>
         </ul>
     </div>
     <div id="child">
