--- a/updated.html
+++ b/updated.html
@@ -19,12 +19,12 @@
     <style>
     @font-face {
         font-family: "steelfish";
-        src: url("Steelfish-Light.woff") format('woff');
+        src: url("fonts/Steelfish-Light.woff") format('woff');
     }
     
     @font-face {
         font-family: "steelfish";
-        src: url("Steelfish-Bold.woff") format('woff');
+        src: url("fonts/Steelfish-Bold.woff") format('woff');
         font-weight: bold;
     }
     
