--- a/updated.html
+++ b/updated.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <!-- <link rel="stylesheet" type="text/css" href="css/umbg.css" /> -->
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -177,8 +178,8 @@ a:hover {
             <i class="fa fa-fw fa-angle-down"></i>
         </a>
         <div class="hero__video ak-video-fallback">
-            <video autoplay loop muted>
-                <source src="tap_film_web.mp4" type="video/mp4">
+            <video autoplay loop>
+                <source src="http://www.tap.foundation/videos/tap_film_web.mp4" type="video/mp4">
             </video>
         </div>
     </section>
