--- a/updated.html
+++ b/updated.html
@@ -255,7 +255,7 @@
         </div>
         <div class="hero__video ak-video-fallback">
             <video autoplay loop id="myVideo">
-                <source src="//www.tap.foundation/videos/tap_film_web.mp4" type="video/mp4">
+                <source src="http://www.tap.foundation/videos/tap_film_web.mp4" type="video/mp4">
             </video>
         </div>
     </section>
