--- a/updated.html
+++ b/updated.html
@@ -275,7 +275,7 @@
         <section class="row loon-story">
             <div class="col-lg-6">
                 <div class="loon-story__item" data-toggler="flight">
-                    <h3 class="loon-story__title">For More Information Please Visit</h3>
+                    <h3 class="loon-story__title">For more information please visit</h3>
                     <a href="http://www.transafricapipeline.org" target="_blank" class="linkText">www.transafricapipeline.org</a>
                 </div>
             </div>
@@ -289,7 +289,7 @@
         </section>
         <section class="row loon-story">
             <div class="col-lg-12 text-center">
-              <p class="line6">TAP Foundation is a registered 501(c)(3) charitable organization.</p>
+              <p class="line6">TAP Foundation is a registered 501(c)(3) charitable organization</p>
             </div>
         </section>
     </div>
