--- a/updated.html
+++ b/updated.html
@@ -263,7 +263,7 @@
             </div>
         </section>
         <section class="row loon-story">
-            <div class="col-lg-6">
+            <div class="col-lg-6 text-right">
                 <div class="loon-story__item" data-toggler="flight">
                     <h3 class="loon-story__title">For more information please visit</h3>
                     <a href="http://www.transafricapipeline.org" target="_blank" class="linkText">www.transafricapipeline.org</a>
