--- a/updated.html
+++ b/updated.html
@@ -264,7 +264,7 @@
         <section class="row">
             <div class="col-lg-12 text-center">
                 <h2 id="top" class="text--hero text--hero-large">
-			<div class="testingFont">Water is life</div>
+			<div><strong>Water is life</strong></div>
                 	<div id="topText"><strong>TRANS AFRICA PIPELINE</strong></div>
                 	<div id="midText">A permanent solution to drought</div>
                 	<div id="btmText">Africa’s largest water project</div>
