--- a/updated.html
+++ b/updated.html
@@ -272,14 +272,11 @@
             </div>
         </section>
         <section class="row loon-story">
-            <div class="col-lg-5 text-right">
+		            <div class="col-lg-12 text-center">
                 <div class="loon-story__item" data-toggler="flight">
                     <h3 class="loon-story__title">For more information please visit</h3>
                     <a href="http://www.transafricapipeline.org" target="_blank" class="linkText">www.transafricapipeline.org</a>
                 </div>
-            </div>
-		<div class="col-lg-2"></div>
-            <div class="col-lg-5">
                 <div class="loon-story__item" data-toggler="connection">
                     <h3 class="loon-story__title">Contacts</h3>
                     <p class="line4">Funding: Luke Crampton, TAP Foundation: <a href="mailto:lcrampton@transafricapipeline.org">lcrampton@transafricapipeline.org</a></p>
