--- a/updated.html
+++ b/updated.html
@@ -272,11 +272,11 @@
         </section>
         <section class="row loon-story">
 		            <div class="col-lg-12 text-center">
-                <div class="loon-story__item" data-toggler="flight">
+                <div class="loon-story__item" data-toggler="flight" style="margin-bottom: 40px;">
                     <h3 class="loon-story__title">For more information please visit</h3>
                     <a href="http://www.transafricapipeline.org" target="_blank" class="linkText">www.transafricapipeline.org</a>
                 </div>
-                <div class="loon-story__item" data-toggler="connection">
+                <div class="loon-story__item" data-toggler="connection" style="margin-bottom: 40px;">
                     <h3 class="loon-story__title">Contacts</h3>
                     <p class="line4">Funding: Luke Crampton, TAP Foundation: <a href="mailto:lcrampton@transafricapipeline.org">lcrampton@transafricapipeline.org</a></p>
                     <p class="line5">Facts: Dr. Rod Tennyson, TAP: <a href="mailto:rtennyson@transafricapipeline.org">rtennyson@transafricapipeline.org</a></p>
